--- a/alerticx/package.json
+++ b/alerticx/package.json
@@ -72,6 +72,7 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "theme-provider": "^1.0.8",
     "three": "^0.174.0",
     "vaul": "^0.9.6",
     "zod": "^3.24.1"
